--- a/main.ipynb
+++ b/main.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "42d4e918",
    "metadata": {},
    "outputs": [
@@ -50,6 +50,7 @@
     "# *********************************************\n",
     "\n",
     "filename=\"taj_mahal\"\n",
+    "# filename=\"hill\"\n",
     "\n",
     "# 1) Load images\n",
     "img1 = imread(\"data/img1.jpg\")\n",
